# ExcavatorDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_excavator_example.cpp
.github/workflows/: ci.yml
include/: AudioManager.hpp  Car.hpp  Coin.hpp  CoinManager.hpp  CollisionWorld.hpp  DigZone.hpp  DumpZone.hpp  Excavator.hpp  Gate.hpp  InputManager.hpp  ObjectSpawner.hpp  ParticleSystem.hpp  Renderer.hpp  Settings.hpp  TrackMarkManager.hpp  World.hpp
models/: Gate.mtl  MainBody.mtl  Rock1.mtl  TrackAnimation2.mtl
src/: Car.cpp  Coin.cpp  CoinManager.cpp  CollisionWorld.cpp  DigZone.cpp  DumpZone.cpp  Gate.cpp  InputManager.cpp  ObjectSpawner.cpp  TrackMarkManager.cpp  World.cpp
src/Logic/: AudioManager.cpp  Coin.cpp  CoinManager.cpp  CollisionWorld.cpp  DigZone.cpp  DumpZone.cpp  Excavator.cpp  InputManager.cpp  ObjectSpawner.cpp
src/Visualization/: ParticleSystem.cpp  Renderer.cpp  TrackMarkManager.cpp  World.cpp
tests/: test_coin.cpp  test_collision.cpp  test_main.cpp  test_particle.cpp  test_zones.cpp
